syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.afeka.project.waf.api";
option java_outer_classname = "WAFApiGRPC";

package api;

service ServerAPI {
    rpc IsValidRequest (HTTPRequest) returns (AnalysisStatus) {}
    rpc IsValidResponse (HTTPResponse) returns (AnalysisStatus) {}
    rpc ping (Ping) returns (Pong) {}
}

message Ping {

}

message Pong {

}

message UUID {
    bytes data = 1;
}

message HTTPRequest {
    string data = 1;
}

message HTTPResponse {
    UUID uuid = 1;
    string data = 2;
}

enum MessageStatus {
    Block = 0;
    Allow = 1;
}

message AnalysisStatus {
    MessageStatus status = 1;
    UUID uuid = 2;
}



